Adicionado JS e CSS

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
 				<nav>
 					<ul class="nav-links">
-						<li><a href="#">Home</a></li>
-						<li><a href="#">Cursos</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="cursos.html">Cursos</a></li>
 						<li><a href="#">Contato</a></li>
 						<a href="#" class="cta"><button>Entrar</button></a>
 					</ul>
@@ -38,13 +38,14 @@
 
 				<nav>
 					<div class="mobile-nav-icon">
-						<button class="menu-icon"><img src="" alt="" /></button>
+						<button onclick="menuShow()" class="menu-icon">
+							MOBILE<img src="" alt="" />
+						</button>
 					</div>
-
 					<ul class="mobile-nav">
-						<li><a href="#">Home</a></li>
-						<li><a href="#">Cursos</a></li>
-						<li><a href="#">Contato</a></li>
+						<li><a href="#">MOBILE</a></li>
+						<li><a href="#">MOBILE</a></li>
+						<li><a href="#">MOBILE</a></li>
 						<a href="#" class="cta"><button>Entrar</button></a>
 					</ul>
 				</nav>
@@ -234,5 +235,6 @@
 				<h4>E-TECH LEARNING @2023</h4>
 			</footer>
 		</div>
+		<script src="script/script.js"></script>
 	</body>
 </html>
