Fix Resposivity / Fix Courses / Add Bootstrap 1

--- a/cursos.html
+++ b/cursos.html
@@ -42,8 +42,10 @@
 
 				<section class="courses-container">
 					<div class="course">
-						Curso JavaScript
 						<ul>
+							<li class="course-name">
+								JavaScript do Básico ao Avançado
+							</li>
 							<li>
 								<img
 									class="img-course"
@@ -51,7 +53,6 @@
 									alt="Curso JavaScript"
 								/>
 							</li>
-							<li class="price">Gratuito</li>
 							<li></li>
 							<li>Acesso a mais de 20 Mini-Cursos</li>
 							<li>Suporte Limitado</li>
@@ -60,17 +61,56 @@
 					</div>
 
 					<div class="course">
-						Curso React
-						<ul class="course-name">
-							<li>xxxxxxxxxxxxx</li>
+						<ul>
+							<li class="course-name">
+								JavaScript do Básico ao Avançado
+							</li>
+							<li>
+								<img
+									class="img-course"
+									src="./img/curso_js.jpg"
+									alt="Curso JavaScript"
+								/>
+							</li>
+							<li></li>
+							<li>Acesso a mais de 20 Mini-Cursos</li>
+							<li>Suporte Limitado</li>
+							<li class="course-btn">Saber mais</li>
 						</ul>
 					</div>
 
 					<div class="course">
-						Curso SQL
-						<ul class="course-name">
-							<li class="price">Gratuito</li>
-							<li>ssssssssss</li>
+						<ul>
+							<li class="course-name">
+								JavaScript do Básico ao Avançado
+							</li>
+							<li>
+								<img
+									class="img-course"
+									src="./img/curso_js.jpg"
+									alt="Curso JavaScript"
+								/>
+							</li>
+							<li></li>
+							<li>Acesso a mais de 20 Mini-Cursos</li>
+							<li>Suporte Limitado</li>
+							<li class="course-btn">Saber mais</li>
+						</ul>
+					</div>
+
+					<div class="course">
+						<ul>
+							<li class="course-name">
+								JavaScript do Básico ao Avançado
+							</li>
+							<li>
+								<img
+									class="img-course"
+									src="./img/curso_js.jpg"
+									alt="Curso JavaScript"
+								/>
+							</li>
+							<li></li>
 							<li>Acesso a mais de 20 Mini-Cursos</li>
 							<li>Suporte Limitado</li>
 							<li class="course-btn">Saber mais</li>
