--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./css/style.css" />
-		<link rel="stylesheet" href="./css/responsivity.css" />
+
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -12,17 +11,19 @@
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
 		/>
-		<!-- <link /*Bootstrap*/
+		<link /*Bootstrap*/
 		href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
 		rel="stylesheet"
 		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-		crossorigin="anonymous" /> -->
+		crossorigin="anonymous" />
+		<link rel="stylesheet" href="./css/style.css" />
+		<link rel="stylesheet" href="./css/responsivity.css" />
 		<link rel="shortcut icon" href="./img/pc.svg" type="image/x-icon" />
 		<title>E-TECH LEARNING - Cursos de Tecnologia</title>
 	</head>
 
 	<body>
-		<div class="container">
+		<div class="">
 			<header>
 				<h1>E-TECH LEARNING</h1>
 				<img class="logo" src="./img/pc.svg" alt="Logo" />
