--- a/cursos.html
+++ b/cursos.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 	<head>
-		<meta charset="UTF-8" />
+		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+			integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
+		<link /*Bootstrap*/
+		href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+		rel="stylesheet"
+		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+		crossorigin="anonymous" />
 		<link rel="stylesheet" href="./css/style.css" />
 		<link rel="stylesheet" href="./css/cursos.css" />
 		<link rel="stylesheet" href="./css/responsivity.css" />
+		<link rel="shortcut icon" href="./img/pc.svg" type="image/x-icon" />
+		<title>Cursos | E-TECH LEARNING</title>
 	</head>
 	<body>
-		<div class="container">
+		<div class="">
 			<header>
 				<h1>E-TECH LEARNING</h1>
 				<img class="logo" src="./img/pc.svg" alt="Logo" />
@@ -19,6 +32,20 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="cursos.html">Cursos</a></li>
 						<li><a href="#">Contato</a></li>
+						<a href="#" class="cta"><button>Entrar</button></a>
+					</ul>
+				</nav>
+
+				<nav>
+					<div class="mobile-nav-icon">
+						<button onclick="menuShow()" class="menu-icon">
+							MOBILE<img src="" alt="" />
+						</button>
+					</div>
+					<ul class="mobile-nav">
+						<li><a href="#">MOBILE</a></li>
+						<li><a href="#">MOBILE</a></li>
+						<li><a href="#">MOBILE</a></li>
 						<a href="#" class="cta"><button>Entrar</button></a>
 					</ul>
 				</nav>
@@ -100,9 +127,7 @@
 
 					<div class="course">
 						<ul>
-							<li class="course-name">
-								JavaScript do Básico ao Avançado
-							</li>
+							<li class="course-name">do Básico ao Avançado</li>
 							<li>
 								<img
 									class="img-course"
@@ -125,5 +150,10 @@
 			</footer>
 		</div>
 		<script src="script/script.js"></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
