--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
-		<meta charset="UTF-8" />
+		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -19,7 +18,7 @@
 		<link rel="stylesheet" href="./css/style.css" />
 		<link rel="stylesheet" href="./css/responsivity.css" />
 		<link rel="shortcut icon" href="./img/pc.svg" type="image/x-icon" />
-		<title>E-TECH LEARNING - Cursos de Tecnologia</title>
+		<title>E-TECH LEARNING | Cursos de Tecnologia</title>
 	</head>
 
 	<body>
@@ -53,11 +52,107 @@
 			</header>
 
 			<main>
-				<div class="main-banner">
-					<h1>E-TECH LEARNING</h1>
-					<p>
-						Os melhores cursos e professores de tecnologia em um só lugar!
-					</p>
+				<div
+					id="carouselExampleCaptions"
+					class="carousel slide"
+					data-bs-ride="false"
+				>
+					<div class="carousel-indicators">
+						<button
+							type="button"
+							data-bs-target="#carouselExampleCaptions"
+							data-bs-slide-to="0"
+							class="active"
+							aria-current="true"
+							aria-label="Slide 1"
+						></button>
+						<button
+							type="button"
+							data-bs-target="#carouselExampleCaptions"
+							data-bs-slide-to="1"
+							aria-label="Slide 2"
+						></button>
+						<button
+							type="button"
+							data-bs-target="#carouselExampleCaptions"
+							data-bs-slide-to="2"
+							aria-label="Slide 3"
+						></button>
+					</div>
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img
+								src="./img/background-1.png"
+								class="d-block w-100"
+								alt="Banner oficial E-Tech Learning"
+							/>
+							<div
+								class="carousel-caption d-none d-md-block carousel-text"
+							>
+								<h1>E-TECH LEARNING</h1>
+								<p>
+									Reinventando o aprendizado online com cursos
+									interativos e envolventes.
+								</p>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<img
+								src="./img/test.png"
+								class="d-block w-100"
+								alt="..."
+							/>
+							<div
+								class="carousel-caption d-none d-md-block carousel-text"
+							>
+								<h1>E-TECH LEARNING</h1>
+								<p>
+									Reinventando o aprendizado online com cursos
+									interativos e envolventes.
+								</p>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<img
+								src="./img/test.png"
+								class="d-block w-100"
+								alt="..."
+							/>
+							<div
+								class="carousel-caption d-none d-md-block carousel-text"
+							>
+								<h1>E-TECH LEARNING</h1>
+								<p>
+									Reinventando o aprendizado online com cursos
+									interativos e envolventes.
+								</p>
+							</div>
+						</div>
+					</div>
+					<button
+						class="carousel-control-prev"
+						type="button"
+						data-bs-target="#carouselExampleCaptions"
+						data-bs-slide="prev"
+					>
+						<span
+							class="carousel-control-prev-icon"
+							aria-hidden="true"
+						></span>
+						<span class="visually-hidden">Previous</span>
+					</button>
+					<button
+						class="carousel-control-next"
+						type="button"
+						data-bs-target="#carouselExampleCaptions"
+						data-bs-slide="next"
+					>
+						<span
+							class="carousel-control-next-icon"
+							aria-hidden="true"
+						></span>
+						<span class="visually-hidden">Next</span>
+					</button>
 				</div>
 
 				<section class="services-container">
@@ -76,11 +171,11 @@
 							<i class="fas fa-rocket"></i>
 							<h3>Impulsionamento de Carreira</h3>
 							<p>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit.
-								Fugiat non accusantium neque quidem totam praesentium,
-								aperiam ratione, in omnis necessitatibus nesciunt ullam
-								hic explicabo maiores cupiditate quibusdam beatae,
-								maxime mollitia.
+								Nossos cursos são projetados para equipá-lo com as
+								habilidades necessárias para avançar em sua carreira.
+								Seja para progredir na carreira atual ou para uma
+								mudança completa, a E-TECH LEARNING é o seu parceiro
+								para o sucesso profissional.
 							</p>
 						</li>
 
@@ -88,11 +183,12 @@
 							<i class="fas fa-comments"></i>
 							<h3>Suporte 24/7</h3>
 							<p>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit.
-								Fugiat non accusantium neque quidem totam praesentium,
-								aperiam ratione, in omnis necessitatibus nesciunt ullam
-								hic explicabo maiores cupiditate quibusdam beatae,
-								maxime mollitia.
+								Estamos aqui para você, a qualquer hora, em qualquer
+								dia. Nossa equipe de suporte dedicada está disponível
+								24/7 para ajudá-lo a superar quaisquer obstáculos em seu
+								caminho para o sucesso no aprendizado. Na E-TECH
+								LEARNING, você nunca está sozinho em sua jornada
+								educacional.
 							</p>
 						</li>
 					</ul>
@@ -108,7 +204,9 @@
 							id="domain"
 							placeholder="Digite o domínio desejado"
 						/>
-						<input type="submit" value="Procurar Cursos" />
+						<a href="./cursos.html">
+							<input type="submit" value="Procurar Cursos" />
+						</a>
 					</form>
 				</section>
 
@@ -182,11 +280,11 @@
 								/>
 								<h3>Impulsionamento de Carreira</h3>
 								<p>
-									Lorem ipsum dolor sit amet consectetur adipisicing
-									elit. Fugiat non accusantium neque quidem totam
-									praesentium, aperiam ratione, in omnis necessitatibus
-									nesciunt ullam hic explicabo maiores cupiditate
-									quibusdam beatae, maxime mollitia.
+									Nossos cursos são projetados para equipá-lo com as
+									habilidades necessárias para avançar em sua carreira.
+									Seja para progredir na carreira atual ou para uma
+									mudança completa, a E-TECH LEARNING é o seu parceiro
+									para o sucesso profissional.
 								</p>
 							</li>
 
@@ -237,5 +335,10 @@
 			</footer>
 		</div>
 		<script src="script/script.js"></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
